# stand-in-language

./: .gitignore  BRANCH_PROGRESS.md  Prelude.tel  README.md  brands-udt.md  brands.tel  brands2.tel  examples.tel  flake.nix  hie.yaml  inputtest.tel  simpleplus.tel  simpleplus2.tel  simpleplus3.tel  simpleplus4.tel  simpleplus6.tel  simpleplus8.tel  sizing_fail5.tel  tc.tel  tc_ultra_minimal.tel  telomare.cabal  tictactoe.tel  udt.md  udt.tel
.github/workflows/: telomare-ci.yml
app/: Evaluare.hs  LSP.hs  Main.hs  Repl.hs  TelomareLSP.hs
emacs-telomare-mode/: README.md  telomare-mode-common.el  telomare-mode-doom.el  telomare-mode-spacemacs.el  telomare-mode-vanilla.el
hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-commit  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  update.sample
src/: Debug.hs  PrettyPrint.hs  Telomare.hs  Telomare.lazy_eval.hs  Test.hs
src/Telomare/: Decompiler.hs  Eval.hs  Parser.hs  Possible.hs  PossibleData.hs  Resolver.hs  RunTime.hs  TypeChecker.hs
test/: ArithmeticTests.hs  CaseTests.hs  Common.hs  NatUDTTests.hs  ParserTests.hs  ResolverTests.hs  SizingTest.hs  SizingTests.hs  Spec.hs  UDTTests.hs
