name:                telomare
version:             0.1.0.0
synopsis:            A simple but robust virtual machine
description:         Please see README.md
homepage:            https://github.com/Stand-In-Language/stand-in-language#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Sam Griffin
maintainer:          sam.griffin@gmail.com
copyright:           2020 Sam Griffin
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10
extra-libraries:     chez

data-files:          bench/MemoryBench/cases
                   , Prelude.tel
                   , tictactoe.tel
                   , examples.tel
                   , simpleplus.tel
                   , testchar.tel

library
  hs-source-dirs:      src
  other-extensions:    GADTs
                     , EmptyDataDecls
                     , DeriveFunctor
                     , FlexibleContexts
                     , ScopedTypeVariables
                     , OverloadedStrings
                     , RecursiveDo
                     , LambdaCase
  exposed-modules:     Naturals
                     , Debug
                     , PrettyPrint
                     , Telomare
                     , Telomare.Eval
                     , Telomare.Decompiler
                     , Telomare.Optimizer
                     , Telomare.Parser
                     , Telomare.Possible
                     , Telomare.PossibleData
                     , Telomare.Resolver
                     , Telomare.RunTime
                     , Telomare.TypeChecker
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , bytestring
                     , clock
                     , containers
                     , data-fix
                     , deepseq
                     , derive-storable
                     , dlist
                     , megaparsec
                     , memory
                     , mtl
                     , recursion-schemes
                     , stm
                     , text
                     , transformers
                     , vector
                     -- , sbv
                     , strict
                     , tasty
                     , tasty-hunit
                     , deriving-compat
                     , lens
                     , hspec
                     , QuickCheck
                     , cryptonite
                     , bytestring
                     , crypto-api
                     , utf8-string
                     , validity
                     , genvalidity
                     , genvalidity-containers
                     , process
                     , free
  -- uncomment this line to get a cabal repl. Use appropiate complete path (will error with a relative path).
  -- extra-lib-dirs:      /home/hhefesto/src/telomare/lib
  default-language:    Haskell2010
  -- ghc-options:         -v3

executable telomare
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , optparse-applicative
                     , stm
                     , strict
                     , telomare
  default-language:    Haskell2010

executable telomare-repl
  hs-source-dirs:      app
  main-is:             Repl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , free
                     , haskeline
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , stm
                     , strict
                     , telomare
  default-language:    Haskell2010

executable telomare-evaluare
  hs-source-dirs: app
  main-is: Evaluare.hs
  ghc-options: -threaded -Wall
  build-depends:
                base,
                containers,
                free,
                mtl,
                reflex,
                reflex-vty,
                stm,
                strict,
                telomare,
                text,
                time,
                transformers,
                vty
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    CPP
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies

executable telomare-lsp
  main-is:             LSP.hs
  hs-source-dirs:      app

  build-depends:       base
                     , containers
                     , lens
                     , lsp
                     , lsp-types
                     , mtl
                     , filepath
                     , stm
                     , telomare
                     , text
                     , aeson

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wunused-packages

test-suite telomare-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Common
  build-depends:       QuickCheck
                     , base
                     , containers
                     , dlist
                     , free
                     , hspec
                     , hspec-core
                     , mtl
                     , stm
                     , strict
                     , telomare
                     , unix
  ghc-options:         -threaded
                       -rtsopts
                       -- -prof                         -- uncomment this and the following for profiling
                       -- -fprof-auto
                       -- "-with-rtsopts=-N -p -s -hT"
  default-language:    Haskell2010

test-suite telomare-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ParserTests.hs
  other-modules:       Common
  build-depends:       QuickCheck
                     , base
                     , containers
                     , free
                     , lens
                     , megaparsec
                     , mtl
                     , process
                     , recursion-schemes
                     , stm
                     , strict
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , telomare
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite telomare-resolver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ResolverTests.hs
  other-modules:       Common
                     , CaseTests
  build-depends:       Diff
                     , QuickCheck
                     , base
                     , containers
                     , free
                     , megaparsec
                     , mtl
                     , pretty-show
                     , recursion-schemes
                     , stm
                     , strict
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , telomare
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite telomare-sizing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             SizingTest.hs
  other-modules:       Common
                     , SizingTests
  build-depends:       base
                     , containers
                     , dlist
                     , hspec
                     , hspec-core
                     , mtl
                     , telomare
                     , strict
                     , QuickCheck
                     , unix
                     , free
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite telomare-arithmetic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ArithmeticTests.hs
  other-modules:       Common
  build-depends:       base
                     , containers
                     , free
                     , megaparsec
                     , QuickCheck
                     , strict
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , telomare
                     , unix

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark telomare-serializer-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             SerializerBench.hs
  build-depends:       base, telomare, deepseq, strict, vector, criterion, criterion-measurement
  ghc-options:         -with-rtsopts=-T

benchmark telomare-memory-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             MemoryBench.hs
  other-modules:       MemoryBench.Cases
                     -- , MemoryBench.LLVM
                     , Paths_telomare
  build-depends:       base
                     , telomare
                     , deepseq
                     , strict
                     , weigh
                     , parsec
                     , mtl
                     , containers
                     , bytestring
                     -- , llvm-hs-pure
                     -- , llvm-hs
  ghc-options:
                         -threaded

source-repository head
  type:     git
  location: https://github.com/Stand-In-Language/stand-in-language
